Fix oversized header on mobiles and tablets

--- a/src/sass/components/_navbar.scss
+++ b/src/sass/components/_navbar.scss
@@ -1,5 +1,11 @@
 nav {
   float:right;
+
+  @media screen and (max-width: 720px) {
+    float: none;
+    text-align: center;
+  }
+
   padding-top: 1.25em;
 
   & > ul {
