--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -18,8 +18,17 @@ body > .container {
       color: $brand-color;
       margin-bottom: 5px;
       padding-bottom: 5px;
+
+      @media screen and (max-width: 420px) {
+        font-size: 1.5em;
+      }
+
+      @media screen and (min-width: 421px) and (max-width: 1024px) {
+        font-size: 1.25em;
+      }
     }
 
     margin-bottom: 3em;
   }
 }
+
